# StarInvadersDemo

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/main/logic/: gamelogic.c  gamelogic.h
src/main/setup/: logic.h  movement.h  sizes.h
src/main/utils/: structs.h
